objects/Pay_Rule_Line_Detail__c/Pay_Rule_Line_Detail__c.object-meta.xml
<CustomObject>
    <label>Pay Rule Line Detail</label>
    <nameField>
        <displayFormat>PRLD-{000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Rule Line Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>