objects/Pay_Rule_Line_Detail__c/fields/Blocked_for_Export__c.field-meta.xml
<CustomField>
    <fullName>Blocked_for_Export__c</fullName>
    <formula>Pay_Rule_Line__r.Blocked_for_Export__c</formula>
    <label>Blocked for Export</label>
    <type>Checkbox</type>
</CustomField>