objects/Pay_Rule_Line_Detail__c/fields/End_Time_in_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Time_in_Text__c</fullName>
    <formula>TEXT( End_Time__c )</formula>
    <label>End Time in Text</label>
    <type>Text</type>
</CustomField>