objects/Pay_Rule_Line_Detail__c/fields/Pay_Rule_Line__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule_Line__c</fullName>
    <label>Pay Rule Line</label>
    <referenceTo>Pay_Rule_Line__c</referenceTo>
    <relationshipLabel>Pay Rule Line Detail</relationshipLabel>
    <relationshipName>Pay_Rule_Line_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>