objects/Pay_Rule_Line_Detail__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <label>Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>