objects/Pay_Rule_Line_Detail__c/fields/Rate_Code_After_Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code_After_Number_of_Hours__c</fullName>
    <label>Rate Code After Number of Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>