objects/Pay_Rule_Line_Detail__c/fields/Rate_Code_for_Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code_for_Remaining_Hours__c</fullName>
    <label>Rate Code for Remaining Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>