objects/Pay_Rule_Line_Detail__c/fields/Start_Time_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_in_Text__c</fullName>
    <formula>TEXT( Start_Time__c )</formula>
    <label>Start Time in Text</label>
    <type>Text</type>
</CustomField>